<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backround"
    tools:context=".register.RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/imageContainer"
        android:layout_width="0dp"
        android:layout_height="251dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgIllustration"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:scaleType="fitCenter"
            android:src="@drawable/splash"
            android:contentDescription="@string/smartbin_logo_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageContainer"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="30dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="false">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="30dp"
                android:paddingBottom="40dp">

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/greeting_user_halo"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvSubtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/register_prompt_dulu" android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvTitle" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:outlineSpotShadowColor="@color/black"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    tools:visibility="visible" />

                <EditText
                    android:id="@+id/nameEditText"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/rounded_corner_background"
                    android:backgroundTint="@color/hijau"
                    android:drawablePadding="8dp"
                    android:hint="@string/hint_full_name_input"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvSubtitle"
                    android:inputType="textPersonName" />
                <EditText
                android:id="@+id/emailEditText"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_corner_background"
                android:backgroundTint="@color/hijau"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="8dp"
                android:hint="@string/hint_email_input"
                android:inputType="textEmailAddress"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nameEditText" />

                <EditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/rounded_corner_background"
                    android:backgroundTint="@color/hijau"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawableEnd="@drawable/ic_visibility"
                    android:drawablePadding="8dp"
                    android:hint="@string/hint_password_input"
                    android:inputType="textPassword"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/emailEditText" />

                <EditText
                    android:id="@+id/confirmPasswordEditText"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/rounded_corner_background"
                    android:backgroundTint="@color/hijau"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawableEnd="@drawable/ic_visibility"
                    android:drawablePadding="8dp"
                    android:hint="@string/hint_confirm_password"
                    android:inputType="textPassword"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/passwordEditText" />

                <Button
                    android:id="@+id/registerButton"
                    android:layout_width="165dp"
                    android:layout_height="59dp"
                    android:layout_marginTop="32dp"
                    android:backgroundTint="@color/black"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:text="@string/button_register_text" android:textColor="@android:color/white"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/confirmPasswordEditText" />

                <TextView
                    android:id="@+id/haveAccountTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/sudah_punya"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toStartOf="@id/loginTextView"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/registerButton" />

                <TextView
                    android:id="@+id/loginTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/login"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?android:attr/selectableItemBackground"
                    app:layout_constraintBaseline_toBaselineOf="@id/haveAccountTextView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/haveAccountTextView" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>